--- a/src/main/resources/templates/reports/list.html
+++ b/src/main/resources/templates/reports/list.html
@@ -30,7 +30,7 @@
                             <tbody>
                                   <tr th:each="employee:${reportsList}">
                                       <td class="align-middle" th:text="${employee.name}"></td>
-                                      <td class="align-middle" th:text="${reports.day}"></td>
+                                      <td class="align-middle" th:text="${reports.date}"></td>
                                       <td class="align-middle"><a th:href="@{/reports/{title}/(title=${reports.title})}" class="btn btn-primary">詳細</a></td>
                                   </tr>
                              </tbody>
@@ -39,7 +39,7 @@
                       </div><!--//end_card//-->
 
                  <p class="mb-3" th:text="'（ 全' + ${listSize} + '件 ）'"> </p>
-                 <a th:href="@{/employees/add}" class="btn btn-primary">登録</a>
+                 <a th:href="@{/reports/add}" class="btn btn-primary">登録</a>
 
                 </div><!--///end_col-xl-11///-->
                 </div><!--///cend_row///-->
