--- a/src/main/resources/templates/reports/list.html
+++ b/src/main/resources/templates/reports/list.html
@@ -28,9 +28,10 @@
                               </tr>
                             </thead>
                             <tbody>
-                                  <tr th:each="employee:${reportsList}">
+                                  <tr th:each="reports${reportsList}">
                                       <td class="align-middle" th:text="${employee.name}"></td>
-                                      <td class="align-middle" th:text="${reports.date}"></td>
+                                      <td class="align-middle" th:text="${reports.reportDate}"></td>
+                                      <td class="align-middle" th:text="${reports.title}"></td>
                                       <td class="align-middle"><a th:href="@{/reports/{title}/(title=${reports.title})}" class="btn btn-primary">詳細</a></td>
                                   </tr>
                              </tbody>
