--- a/src/main/resources/templates/reports/list.html
+++ b/src/main/resources/templates/reports/list.html
@@ -29,7 +29,7 @@
                             </thead>
                             <tbody>
                                   <tr th:each="reports:${reportsList}">
-                                      <td class="align-middle" th:text="${employee.name}"></td>
+                                      <td class="align-middle" th:text="${employee.code}"></td>
                                       <td class="align-middle" th:text="${reports.reportDate}"></td>
                                       <td class="align-middle" th:text="${reports.title}"></td>
                                       <td class="align-middle"><a th:href="@{/reports/{title}/(title=${reports.title})}" class="btn btn-primary">詳細</a></td>
