--- a/src/main/resources/templates/reports/list.html
+++ b/src/main/resources/templates/reports/list.html
@@ -32,7 +32,9 @@
                             		<td class="align-middle" th:text="${report.employee.code}"> </td> <!-- employeeはreportに関連付け -->
                                		<td class="align-middle" th:text="${report.reportDate}"> </td>
                                 	<td class="align-middle" th:text="${report.title}"> </td>
-                                	<td class="align-middle"><a th:href="@{/reports/{title}/(title=${report.title})}" class="btn btn-primary">詳細</a></td>
+                                	<td class="align-middle">
+                                		<a th:href="@{/reports/{reportDate}(reportDate=${report.reportDate})}" class="btn btn-primary">詳細</a>
+                                	</td>
                              	</tr>
                              </tbody>
                          </table>
