--- a/src/main/resources/templates/reports/update.html
+++ b/src/main/resources/templates/reports/update.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
 <html class="h-100" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="common/header :: head_fragment(title=日報新規登録)"></head>
+<head th:replace="common/header :: head_fragment(title=日報 更新)"></head>
 
 <body class="h-100 overflow-hidden">
-    <div class="row h-100">
+   <div class="row h-100">
         <div class="h-100 p-3 mb-2 bg-dark text-white col-sm-2">
             <nav th:replace="common/side :: copy"></nav>
         </div>
 
         <div class="mt-3 h-100 col-sm-10">
-            <!-- コンテンツ -->
+        <!-- コンテンツ -->
             <div class="container-fluid p-0">
-                <h1 class="h3 mb-3">日報 新規登録</h1>
+                <h1 class="h3 mb-3">日報 更新</h1>
             </div>
 
-            <div class="col-12 col-xxl-6">
+            <div class="mb-3 col-12 col-xxl-6">
 
                 <div class="col-xl-12">
                     <div class="card">
-                        <div class="card-body">
-                        <form th:action="@{/reports/add}" th:object="${reports}" th:method="post">
-
+                    <div class="card-header">
+                        パスワードは変更する場合のみ入力してください
+                    </div>
+                    <div class="card-body">
+                        <form method="post" th:action="@{/reports/{reportDate}/update(code=${reports.reportDate})}" th:object="${reports}">
                         <div class="wizard wizard-success mb-4">
 
-                             <div class="col-md-4">
+                        <div class="col-md-4">
                                 <label for="datetimepicker1" class="pt-2 pr-2">日付</label>
                               　 <input class="form-control" type="date" id="reportDate" value="年/月/日" th:field="*{reportDate}" th:errorclass="${#fields.hasErrors('reportDate') ? 'error' : ''}" >
-                                    <span th:errors="*{reportDate}" class="text-danger"> </span>
-                                    <span th:if="${reportDateError} neq null" th:text="${reportDateError}" class="text-danger"> </span>
                              </div>
 
-							<div class="mb-3">
+                             <div class="mb-3">
                                  <label class="form-label" for="title">氏名</label>
-                           			 <p class="mb-1" th:text="${employee.name}"></td>
+                           			 <p class="mb-1" th:text="${employee.name}"> </p>
+                           			 <div class="col-md-7">
+                                    	<input class="form-control" type="text" th:field="*{name}" th:errorclass="err" id="name">
+                                    <span th:errors="*{name}" class="text-danger"></span>
                        		</div>
 
-                            <div class="mb-3">
+                        	<div class="mb-3">
                                  <label class="form-label" for="title">タイトル</label>
-                                 <div class="col-md-7">
-                                    <input class="form-control" type="text" th:field="*{title}" th:errorclass="${#fields.hasErrors('title') ? 'error' : ''}" id="title">
+                                  <p class="mb-1" th:text="${reports.title  }"> </p>
+                                  <div class="col-md-7">
+                                  <input class="form-control" type="text" th:field="*{title}" th:errorclass="${#fields.hasErrors('title') ? 'error' : ''}" id="title">
                                     <span th:errors="*{title}" class="text-danger"> </span>
                                     <span th:if="${titleError} neq null" th:text="${titleError}" class="text-danger"> </span>
                                  </div>
                             </div>
 
-                           <div>
+
+
+                        	<div>
                                 <label class="form-label" for="title">内容</label>
                               	<textarea class="form-control" id="exampleFormControlTextarea1" rows="5"> </textarea>
 
@@ -55,19 +61,20 @@
 
 							</div>
 
-              </div><!--//end_wizard wizard-success mb-4//-->
 
-                             <p class="mt-5">
-                                 <input type="submit" value="登録" class="btn btn-primary">
-                                 <a th:href="@{/reports}" class="btn btn-primary">戻る</a>
-                             </p>
+                        </div><!--//end_wizard wizard-success mb-4//-->
+
+                        <p class="mt-5">
+                           <input type="submit" value="更新" class="btn btn-primary">
+                           <a th:href="@{/employees}" class="btn btn-primary">戻る</a>
+                        </p>
 
                         </form>
-                        </div><!--///end_card-body///-->
+                    </div><!--///end_card-body///-->
                     </div><!--///end_card///-->
                 </div><!--///end_col-xl-12///-->
 
-            </div><!--///col-12 col-xxl-6///-->
+            </div><!--///end_col-12 col-xxl-6///-->
         </div><!--///end_mt-3 h-100 col-sm-10////-->
     </div><!--////end_row h-100////-->
 </body>
