--- a/src/main/resources/templates/reports/new.html
+++ b/src/main/resources/templates/reports/new.html
@@ -33,7 +33,7 @@
 
 							<div class="mb-3">
                                  <label class="form-label" for="title">氏名</label>
-                           			 <p class="mb-1" th:text="${employee.name}"></td>
+                           			 <p class="mb-1" th:text="${employee.name}"> </p>
                        		</div>
 
                             <div class="mb-3">
