--- a/src/main/resources/templates/reports/update.html
+++ b/src/main/resources/templates/reports/update.html
@@ -20,7 +20,7 @@
                 <div class="col-xl-12">
                     <div class="card">
                     <div class="card-header">
-                        パスワードは変更する場合のみ入力してください
+
                     </div>
                     <div class="card-body">
                         <form method="post" th:action="@{/reports/{reportDate}/update(code=${reports.reportDate})}" th:object="${reports}">
@@ -34,21 +34,17 @@
                              <div class="mb-3">
                                  <label class="form-label" for="title">氏名</label>
                            			 <p class="mb-1" th:text="${employee.name}"> </p>
-                           			 <div class="col-md-7">
-                                    	<input class="form-control" type="text" th:field="*{name}" th:errorclass="err" id="name">
-                                    <span th:errors="*{name}" class="text-danger"></span>
                        		</div>
 
                         	<div class="mb-3">
                                  <label class="form-label" for="title">タイトル</label>
-                                  <p class="mb-1" th:text="${reports.title  }"> </p>
+                                  <p class="mb-1" th:text="${reports.title}"> </p>
                                   <div class="col-md-7">
                                   <input class="form-control" type="text" th:field="*{title}" th:errorclass="${#fields.hasErrors('title') ? 'error' : ''}" id="title">
                                     <span th:errors="*{title}" class="text-danger"> </span>
                                     <span th:if="${titleError} neq null" th:text="${titleError}" class="text-danger"> </span>
                                  </div>
                             </div>
-
 
 
                         	<div>
@@ -66,7 +62,7 @@
 
                         <p class="mt-5">
                            <input type="submit" value="更新" class="btn btn-primary">
-                           <a th:href="@{/employees}" class="btn btn-primary">戻る</a>
+                           <a th:href="@{/reports}" class="btn btn-primary">戻る</a>
                         </p>
 
                         </form>
