--- a/src/main/resources/templates/reports/detail.html
+++ b/src/main/resources/templates/reports/detail.html
@@ -61,11 +61,11 @@
                         <!-- 更新・削除・戻るボタン -->
                         <div class="mt-5 row g-1">
                             <div class="col-auto">
-                                <a th:href="@{/reports/{reportDate}/update(reportDate=${reports.reportDate})}" class="btn btn-primary">更新</a>
+                                <a th:href="@{/reports/{id}/update(id=${reports.id})}" class="btn btn-primary">更新</a>
                             </div>
 
                             <div class="col-auto">
-                                <form name="form" th:action="@{/reports/{reportDate}/delete(reportDate=${reports.reportDate})}" th:method="post">
+                                <form name="form" th:action="@{/reports/{id}/delete(id=${reports.id})}" th:method="post">
                                     <input type="submit" value="削除" class="btn btn-primary">
                                 </form>
                             </div>
