--- a/src/main/resources/templates/reports/list.html
+++ b/src/main/resources/templates/reports/list.html
@@ -33,7 +33,7 @@
                                		<td class="align-middle" th:text="${report.reportDate}"> </td>
                                 	<td class="align-middle" th:text="${report.title}"> </td>
                                 	<td class="align-middle">
-                                		<a th:href="@{/reports/{reportDate}(reportDate=${report.reportDate})}" class="btn btn-primary">詳細</a>
+                                	<a th:href="@{/reports/{id}/detail(id=${report.id})}" class="btn btn-primary">詳細</a>
                                 	</td>
                              	</tr>
                              </tbody>
