--- a/src/main/resources/templates/reports/new.html
+++ b/src/main/resources/templates/reports/new.html
@@ -49,9 +49,9 @@
                                 <label class="form-label" for="title">内容</label>
                               	<textarea class="form-control" id="exampleFormControlTextarea1" rows="5"> </textarea>
 
-                               		<!--<input class="form-control" type="text" th:field="*{content}" th:errorclass="${#fields.hasErrors('content') ? 'error' : ''}" id="content">
+                               		<input class="form-control" type="text" th:field="*{content}" th:errorclass="${#fields.hasErrors('content') ? 'error' : ''}" id="content">
                                     <span th:errors="*{content}" class="text-danger"> </span>
-                                    <span th:if="${contentError} neq null" th:text="${contentError}" class="text-danger"> </span>-->
+                                    <span th:if="${contentError} neq null" th:text="${contentError}" class="text-danger"> </span>
 
 							</div>
 
