--- a/src/main/resources/templates/reports/detail.html
+++ b/src/main/resources/templates/reports/detail.html
@@ -45,11 +45,13 @@
                         <!-- 更新・削除・戻るボタン -->
                         <div class="mt-5 row g-1">
                             <div class="col-auto">
-                                <a th:href="@{/reports/{id}/update(date=${#temporals.format(reports.reportDate, 'yyyy-MM-dd')})}" class="btn btn-primary">更新</a>
+                                <!-- 更新ボタンのURLを動的に生成 -->
+                                <a th:href="@{/reports/{id}/update(id=${reports.id})}" class="btn btn-primary">更新</a>
                             </div>
 
                             <div class="col-auto">
-                                <form name="form" th:action="@{/reports/{id}/delete(date=${#temporals.format(reports.reportDate, 'yyyy-MM-dd')})}" th:method="post">
+                                <!-- 削除ボタンのURLを動的に生成 -->
+                                <form name="form" th:action="@{/reports/{id}/delete(id=${reports.id}, date=${#temporals.format(reports.reportDate, 'yyyy-MM-dd')})}" th:method="post">
                                     <input type="submit" value="削除" class="btn btn-primary">
                                 </form>
                             </div>
