--- a/src/main/resources/templates/reports/update.html
+++ b/src/main/resources/templates/reports/update.html
@@ -31,10 +31,9 @@
                               　 <input class="form-control" type="date" id="reportDate" value="年/月/日" th:field="*{reportDate}" th:errorclass="${#fields.hasErrors('reportDate') ? 'error' : ''}" >
                              </div>
 
-                             <div class="mb-3">
-                                 <label class="form-label" for="title">氏名</label>
-                           			 <p class="mb-1" th:text="${employee.name}"> </p>
-                       		</div>
+                             <div th:if="${employee != null}">
+                             <p>氏名 <span th:text="${employee.name}"></span></p>
+                             </div>
 
                         	<div class="mb-3">
                                  <label class="form-label" for="title">タイトル</label>
@@ -46,12 +45,9 @@
                                  </div>
                             </div>
 
-
                         	<div>
                                 <label class="form-label" for="title">内容</label>
                               	<textarea class="form-control" id="exampleFormControlTextarea1" rows="5"> </textarea>
-
-                        		</div>
 							</div>
 
 
