--- a/src/main/resources/templates/reports/detail.html
+++ b/src/main/resources/templates/reports/detail.html
@@ -51,8 +51,8 @@
 
                             <div class="col-auto">
                                 <!-- 削除ボタンのURLを動的に生成 -->
-                                <form name="form" th:action="@{/reports/{id}/delete(id=${reports.id}, date=${#temporals.format(reports.reportDate, 'yyyy-MM-dd')})}" th:method="post">
-                                    <input type="submit" value="削除" class="btn btn-primary">
+                                <form name="form" th:action="@{/reports/{id}/delete(id=${reports.id})}" th:method="post">
+                                <input type="submit" value="削除" class="btn btn-primary">
                                 </form>
                             </div>
 
