--- a/src/main/resources/templates/reports/new.html
+++ b/src/main/resources/templates/reports/new.html
@@ -26,7 +26,7 @@
 
                              <div class="col-md-4">
                                 <label for="datetimepicker1" class="pt-2 pr-2">日付</label>
-                              　 <input class="form-control" type="date" id="reportDate" value="年/月/日" th:field="*{reportDate}" th:errorclass="${#fields.hasErrors('reportDate') ? 'error' : ''}" >
+                              　 <input class="form-control" type="date" id="reportDate" th:field="*{reportDate}" th:errorclass="${#fields.hasErrors('reportDate') ? 'error' : ''}">
                                     <span th:errors="*{reportDate}" class="text-danger"> </span>
                                     <span th:if="${reportDateError} neq null" th:text="${reportDateError}" class="text-danger"> </span>
                              </div>
@@ -45,24 +45,17 @@
                                  </div>
                             </div>
 
-                           <div>
-                                <label class="form-label" for="title">内容</label>
-                              	<textarea class="form-control" id="exampleFormControlTextarea1" rows="5"> </textarea>
-
-                               		<input class="form-control" type="text" th:field="*{content}" th:errorclass="${#fields.hasErrors('content') ? 'error' : ''}" id="content">
-                                    <span th:errors="*{content}" class="text-danger"> </span>
-                                    <span th:if="${contentError} neq null" th:text="${contentError}" class="text-danger"> </span>
-
+                           <div class="form-group">
+       		 					<label for="content">内容</label>
+        						<textarea th:field="*{content}" class="form-control" rows="5" required> </textarea>
 							</div>
 
               </div><!--//end_wizard wizard-success mb-4//-->
-
-                             <p class="mt-5">
-                                 <input type="submit" value="登録" class="btn btn-primary">
-                                 <a th:href="@{/reports}" class="btn btn-primary">戻る</a>
-                             </p>
-
-                        </form>
+							 <p class="mt-5">
+        					<input type="submit" value="登録" class="btn btn-primary">
+        						<a th:href="@{/reports}" class="btn btn-primary">戻る</a>
+    						</p>
+							</form>
                         </div><!--///end_card-body///-->
                     </div><!--///end_card///-->
                 </div><!--///end_col-xl-12///-->
