--- a/src/main/resources/templates/reports/update.html
+++ b/src/main/resources/templates/reports/update.html
@@ -27,7 +27,8 @@
 
                                     <div class="col-md-4">
                                         <label for="reportDate" class="pt-2 pr-2">日付</label>
-                                        <input class="form-control" type="date" id="reportDate" th:field="*{reportDate}" th:errorclass="${#fields.hasErrors('reportDate') ? 'error' : ''}" required>
+                                        <input class="form-control" type="date" id="reportDate" th:field="*{reportDate}" th:errorclass="err" required>
+                                        <span th:errors="*{reportDate}" class="text-danger"></span> <!-- 日付のエラーメッセージ -->
                                     </div>
 
                                     <div class="mb-3">
@@ -38,15 +39,15 @@
                                     <div class="mb-3">
                                         <label class="form-label" for="title">タイトル</label>
                                         <div class="col-md-7">
-                                            <input class="form-control" type="text" th:field="*{title}" th:errorclass="${#fields.hasErrors('title') ? 'error' : ''}" id="title" required>
-                                            <span th:errors="*{title}" class="text-danger"></span>
-                                            <span th:if="${titleError != null}" th:text="${titleError}" class="text-danger"></span>
+                                            <input class="form-control" type="text" th:field="*{title}" th:errorclass="err" id="title" required>
+                                            <span th:errors="*{title}" class="text-danger"></span> <!-- タイトルのエラーメッセージ -->
                                         </div>
                                     </div>
 
                                     <div class="mb-3">
                                         <label class="form-label" for="content">内容</label>
                                         <textarea class="form-control" id="content" th:field="*{content}" rows="3" required></textarea>
+                                        <span th:errors="*{content}" class="text-danger"></span> <!-- 内容のエラーメッセージ -->
                                     </div>
 
                                 </div><!--//end_wizard wizard-success mb-4//-->
