--- a/src/main/resources/templates/reports/list.html
+++ b/src/main/resources/templates/reports/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="h-100" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="common/header :: head_fragment(title=日報一覧)"></head>
+<head th:replace="common/header :: head_fragment(title='日報一覧')"></head>
 
 <body class="h-100 overflow-hidden">
    <div class="row h-100">
@@ -10,42 +10,42 @@
         </div>
 
         <div class="mt-3 h-100 col-sm-10">
-        <!-- コンテンツ -->
+            <!-- コンテンツ -->
             <div class="container-fluid p-0">
                 <h1 class="h3 mb-3">日報一覧</h1>
 
                 <div class="row">
-                <div class="col-xl-11">
+                    <div class="col-xl-11">
+                        <div class="card">
+                            <div class="card-body">
+                                <table class="table table-striped w-100">
+                                    <thead>
+                                        <tr>
+                                            <th>氏名</th>
+                                            <th>日付</th>
+                                            <th>タイトル</th>
+                                            <th>操作</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr th:each="report : ${reportsList}">
+                                            <td class="align-middle" th:text="${report.employee.name}"> </td> <!-- employeeの氏名 -->
+                                            <td class="align-middle" th:text="${report.reportDate}"> </td>
+                                            <td class="align-middle" th:text="${report.title}"> </td>
+                                            <td class="align-middle">
+                                                <a th:href="@{/reports/{id}/detail(id=${report.id})}" class="btn btn-primary">詳細</a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div><!--//end_card-body//-->
+                        </div><!--//end_card//-->
 
-                     <div class="card">
-                        <div class="card-body">
-                        <table class="table table-striped w-100">
-                            <thead>
-                             <tr>
-                                  <th>氏名</th>
-                                  <th>日付</th>
-                                  <th>タイトル</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                            	<tr th:each="report : ${reportsList}">
-                            		<td class="align-middle" th:text="${report.employee.code}"> </td> <!-- employeeはreportに関連付け -->
-                               		<td class="align-middle" th:text="${report.reportDate}"> </td>
-                                	<td class="align-middle" th:text="${report.title}"> </td>
-                                	<td class="align-middle">
-                                	<a th:href="@{/reports/{id}/detail(id=${report.id})}" class="btn btn-primary">詳細</a>
-                                	</td>
-                             	</tr>
-                             </tbody>
-                         </table>
-                         </div><!--//end_card-body//-->
-                      </div><!--//end_card//-->
+                        <p class="mb-3" th:text="'（ 全 ' + ${listSize} + ' 件 ）'"> </p>
+                        <a th:href="@{/reports/add}" class="btn btn-primary">登録</a>
 
-                 <p class="mb-3" th:text="'（ 全' + ${listSize} + '件 ）'"> </p>
-                 <a th:href="@{/reports/add}" class="btn btn-primary">登録</a>
-
-                </div><!--///end_col-xl-11///-->
-                </div><!--///cend_row///-->
+                    </div><!--///end_col-xl-11///-->
+                </div><!--///end_row///-->
             </div><!--///end_container-fluid p-0///-->
 
         </div><!--///end_mt-3 h-100 col-sm-10///-->
